--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,7 @@
 /********** Template CSS **********/
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap");
+
+
 :root {
     --primary: #06BBCC;
     --light: #F0FBFC;
